# Projekt_E-media

./: CMakeLists.txt  TODO  TODO~  a.out  dct.c  dct.h  encryption.c  encryption.c~  encryption.h  encryption.h~  exif.c  exif.c~  exif.h  exif.h~  file_read_func.c  file_read_func.c~  file_read_func.h  file_read_func.h~  jfif.c  jfif.c~  jfif.h  jfif.h~  jpeg_read.c  jpeg_read.c~  jpeg_read.h  jpeg_read.h~  main.c  main.c~  makefile  makefile~  map.c  map.c~  map.h  map.h.gch
TestPhotos/: script.gp
